--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,5 @@ eclipse.preferences.version=1
 encoding//DDL/Databases.sql=UTF-8
 encoding//WebContent/css/mypage.css=UTF-8
 encoding//WebContent/css/sign-up.css=UTF-8
+encoding/1605662926188=UTF-8
+encoding/readme.txt=UTF-8
