--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
 encoding//DDL/Databases.sql=UTF-8
+encoding//WebContent/css/forgetpass.css=UTF-8
+encoding//WebContent/css/login.css=UTF-8
 encoding//WebContent/css/mypage.css=UTF-8
 encoding//WebContent/css/sign-up.css=UTF-8
 encoding/readme.txt=UTF-8
