--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,5 @@ encoding//WebContent/css/forgetpass.css=UTF-8
 encoding//WebContent/css/login.css=UTF-8
 encoding//WebContent/css/mypage.css=UTF-8
 encoding//WebContent/css/sign-up.css=UTF-8
+encoding//src/servlet/SignUpServlet.java=UTF-8
 encoding/readme.txt=UTF-8
